analizadorSintactico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSAND
    APPEND
    CASE
    CONST
    DEFAULT
    DIVIDEASSIGN
    FALSE
    IDENTIFIER
    IMPORT
    MAIN
    MINUSASSIGN
    MOD
    MODASSIGN
    PACKAGE
    PLUSASSIGN
    SWITCH
    TEXT
    TIMESASSIGN
    TRUE

Grammar

Rule 0     S' -> statement
Rule 1     statement -> blocks
Rule 2     blocks -> block
Rule 3     blocks -> block blocks
Rule 4     block -> print_statement
Rule 5     block -> input_statement
Rule 6     block -> conditional_structure
Rule 7     block -> operation
Rule 8     block -> list_structure
Rule 9     block -> map_estructure
Rule 10    block -> map_assign
Rule 11    block -> for_estructure
Rule 12    block -> structure
Rule 13    block -> function
Rule 14    block -> parameters
Rule 15    block -> variable_declaration
Rule 16    variable_declaration -> VAR VARIABLE type
Rule 17    variable_declaration -> VAR VARIABLE ASSIGN value
Rule 18    variable_declaration -> VARIABLE SHORTASSIGN value
Rule 19    structure -> TYPE VARIABLE STRUCT LBRACE statement RBRACE
Rule 20    function -> FUNCTION VARIABLE LPAREN parameters RPAREN type LBRACE blocks RETURN VARIABLE RBRACE
Rule 21    function -> FUNCTION VARIABLE LPAREN parameters RPAREN LBRACE blocks RBRACE
Rule 22    function -> FUNCTION VARIABLE LPAREN RPAREN type LBRACE blocks RETURN VARIABLE RBRACE
Rule 23    function -> FUNCTION VARIABLE LPAREN RPAREN LBRACE blocks RBRACE
Rule 24    values -> value
Rule 25    values -> value COMMA values
Rule 26    string_value -> value
Rule 27    string_value -> CHARSTRING
Rule 28    value -> VARIABLE
Rule 29    value -> number
Rule 30    number -> INT
Rule 31    number -> FLOAT
Rule 32    print_statement -> PRINT LPAREN values RPAREN
Rule 33    print_statement -> PRINT LPAREN string_value RPAREN
Rule 34    print_statement -> PRINT LPAREN FORMATSTRING COMMA values RPAREN
Rule 35    print_statement -> PRINT LPAREN operation RPAREN
Rule 36    print_statement -> PRINT LPAREN RPAREN
Rule 37    input_statement -> INPUT LPAREN values RPAREN
Rule 38    input_statement -> INPUT LPAREN operation RPAREN
Rule 39    input_statement -> INPUT LPAREN RPAREN
Rule 40    operation -> value operator value
Rule 41    operation -> value operator operation
Rule 42    operation -> value double_operator
Rule 43    operator -> PLUS
Rule 44    operator -> MINUS
Rule 45    operator -> TIMES
Rule 46    operator -> DIVIDE
Rule 47    operator -> ASSIGN
Rule 48    double_operator -> INCREMENT
Rule 49    double_operator -> DECREMENT
Rule 50    parameters -> parameter
Rule 51    parameters -> parameter parameters
Rule 52    parameters -> parameter COMMA parameters
Rule 53    parameter -> VARIABLE type
Rule 54    type -> INT
Rule 55    type -> INT32
Rule 56    type -> INT64
Rule 57    type -> STRING
Rule 58    type -> FLOAT
Rule 59    type -> FLOAT32
Rule 60    type -> FLOAT64
Rule 61    type -> BOOL
Rule 62    conditional_structure -> IF conditions conditional_body
Rule 63    conditional_structure -> IF conditions conditional_body ELSE conditional_body
Rule 64    conditional_structure -> IF conditions conditional_body ELSE IF conditions conditional_body ELSE conditional_body
Rule 65    conditional_body -> LBRACE statement RBRACE
Rule 66    conditional_body -> LBRACE BREAK RBRACE
Rule 67    conditional_body -> LBRACE CONTINUE RBRACE
Rule 68    conditions -> condition
Rule 69    conditions -> condition logical_operator conditions
Rule 70    condition -> value relational_operator value
Rule 71    logical_operator -> AND
Rule 72    logical_operator -> OR
Rule 73    logical_operator -> NOT
Rule 74    relational_operator -> GREATER
Rule 75    relational_operator -> LESS
Rule 76    relational_operator -> GREATEREQUALS
Rule 77    relational_operator -> LESSEQUALS
Rule 78    relational_operator -> EQUALS
Rule 79    relational_operator -> DIFFERENT
Rule 80    for_estructure -> for_initialization
Rule 81    for_estructure -> for_infinite_bucle
Rule 82    for_estructure -> for_iterator
Rule 83    for_initialization -> FOR VARIABLE SHORTASSIGN value SEMICOLON condition SEMICOLON value double_operator LBRACE statement RBRACE
Rule 84    for_infinite_bucle -> FOR LBRACE statement RBRACE
Rule 85    for_iterator -> FOR VARIABLE SEMICOLON VARIABLE SHORTASSIGN RANGE VARIABLE LBRACE statement RBRACE
Rule 86    list_structure -> empty_list
Rule 87    list_structure -> list_with_data
Rule 88    list_structure -> defined_list
Rule 89    empty_list -> LBRACE RBRACE
Rule 90    list_with_data -> LBRACE values RBRACE
Rule 91    defined_list -> TYPE VARIABLE LBRACE values RBRACE
Rule 92    map_estructure -> VARIABLE SHORTASSIGN MAP LBRACKET type RBRACKET type LBRACE map_values RBRACE
Rule 93    map_estructure -> VARIABLE SHORTASSIGN MAKE LPAREN MAP LBRACKET type RBRACKET type RPAREN
Rule 94    map_values -> map_value
Rule 95    map_values -> map_value COMMA map_values
Rule 96    map_value -> string_value COLON string_value
Rule 97    map_assign -> VARIABLE LBRACKET string_value RBRACKET ASSIGN string_value

Terminals, with rules where they appear

AMPERSAND            : 
AND                  : 71
APPEND               : 
ASSIGN               : 17 47 97
BOOL                 : 61
BREAK                : 66
CASE                 : 
CHARSTRING           : 27
COLON                : 96
COMMA                : 25 34 52 95
CONST                : 
CONTINUE             : 67
DECREMENT            : 49
DEFAULT              : 
DIFFERENT            : 79
DIVIDE               : 46
DIVIDEASSIGN         : 
ELSE                 : 63 64 64
EQUALS               : 78
FALSE                : 
FLOAT                : 31 58
FLOAT32              : 59
FLOAT64              : 60
FOR                  : 83 84 85
FORMATSTRING         : 34
FUNCTION             : 20 21 22 23
GREATER              : 74
GREATEREQUALS        : 76
IDENTIFIER           : 
IF                   : 62 63 64 64
IMPORT               : 
INCREMENT            : 48
INPUT                : 37 38 39
INT                  : 30 54
INT32                : 55
INT64                : 56
LBRACE               : 19 20 21 22 23 65 66 67 83 84 85 89 90 91 92
LBRACKET             : 92 93 97
LESS                 : 75
LESSEQUALS           : 77
LPAREN               : 20 21 22 23 32 33 34 35 36 37 38 39 93
MAIN                 : 
MAKE                 : 93
MAP                  : 92 93
MINUS                : 44
MINUSASSIGN          : 
MOD                  : 
MODASSIGN            : 
NOT                  : 73
OR                   : 72
PACKAGE              : 
PLUS                 : 43
PLUSASSIGN           : 
PRINT                : 32 33 34 35 36
RANGE                : 85
RBRACE               : 19 20 21 22 23 65 66 67 83 84 85 89 90 91 92
RBRACKET             : 92 93 97
RETURN               : 20 22
RPAREN               : 20 21 22 23 32 33 34 35 36 37 38 39 93
SEMICOLON            : 83 83 85
SHORTASSIGN          : 18 83 85 92 93
STRING               : 57
STRUCT               : 19
SWITCH               : 
TEXT                 : 
TIMES                : 45
TIMESASSIGN          : 
TRUE                 : 
TYPE                 : 19 91
VAR                  : 16 17
VARIABLE             : 16 17 18 19 20 20 21 22 22 23 28 53 83 85 85 85 91 92 93 97
error                : 

Nonterminals, with rules where they appear

block                : 2 3
blocks               : 1 3 20 21 22 23
condition            : 68 69 83
conditional_body     : 62 63 63 64 64 64
conditional_structure : 6
conditions           : 62 63 64 64 69
defined_list         : 88
double_operator      : 42 83
empty_list           : 86
for_estructure       : 11
for_infinite_bucle   : 81
for_initialization   : 80
for_iterator         : 82
function             : 13
input_statement      : 5
list_structure       : 8
list_with_data       : 87
logical_operator     : 69
map_assign           : 10
map_estructure       : 9
map_value            : 94 95
map_values           : 92 95
number               : 29
operation            : 7 35 38 41
operator             : 40 41
parameter            : 50 51 52
parameters           : 14 20 21 51 52
print_statement      : 4
relational_operator  : 70
statement            : 19 65 83 84 85 0
string_value         : 33 96 96 97 97
structure            : 12
type                 : 16 20 22 53 92 92 93 93
value                : 17 18 24 25 26 40 40 41 42 70 70 83 83
values               : 25 32 34 37 90 91
variable_declaration : 15

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . blocks
    (2) blocks -> . block
    (3) blocks -> . block blocks
    (4) block -> . print_statement
    (5) block -> . input_statement
    (6) block -> . conditional_structure
    (7) block -> . operation
    (8) block -> . list_structure
    (9) block -> . map_estructure
    (10) block -> . map_assign
    (11) block -> . for_estructure
    (12) block -> . structure
    (13) block -> . function
    (14) block -> . parameters
    (15) block -> . variable_declaration
    (32) print_statement -> . PRINT LPAREN values RPAREN
    (33) print_statement -> . PRINT LPAREN string_value RPAREN
    (34) print_statement -> . PRINT LPAREN FORMATSTRING COMMA values RPAREN
    (35) print_statement -> . PRINT LPAREN operation RPAREN
    (36) print_statement -> . PRINT LPAREN RPAREN
    (37) input_statement -> . INPUT LPAREN values RPAREN
    (38) input_statement -> . INPUT LPAREN operation RPAREN
    (39) input_statement -> . INPUT LPAREN RPAREN
    (62) conditional_structure -> . IF conditions conditional_body
    (63) conditional_structure -> . IF conditions conditional_body ELSE conditional_body
    (64) conditional_structure -> . IF conditions conditional_body ELSE IF conditions conditional_body ELSE conditional_body
    (40) operation -> . value operator value
    (41) operation -> . value operator operation
    (42) operation -> . value double_operator
    (86) list_structure -> . empty_list
    (87) list_structure -> . list_with_data
    (88) list_structure -> . defined_list
    (92) map_estructure -> . VARIABLE SHORTASSIGN MAP LBRACKET type RBRACKET type LBRACE map_values RBRACE
    (93) map_estructure -> . VARIABLE SHORTASSIGN MAKE LPAREN MAP LBRACKET type RBRACKET type RPAREN
    (97) map_assign -> . VARIABLE LBRACKET string_value RBRACKET ASSIGN string_value
    (80) for_estructure -> . for_initialization
    (81) for_estructure -> . for_infinite_bucle
    (82) for_estructure -> . for_iterator
    (19) structure -> . TYPE VARIABLE STRUCT LBRACE statement RBRACE
    (20) function -> . FUNCTION VARIABLE LPAREN parameters RPAREN type LBRACE blocks RETURN VARIABLE RBRACE
    (21) function -> . FUNCTION VARIABLE LPAREN parameters RPAREN LBRACE blocks RBRACE
    (22) function -> . FUNCTION VARIABLE LPAREN RPAREN type LBRACE blocks RETURN VARIABLE RBRACE
    (23) function -> . FUNCTION VARIABLE LPAREN RPAREN LBRACE blocks RBRACE
    (50) parameters -> . parameter
    (51) parameters -> . parameter parameters
    (52) parameters -> . parameter COMMA parameters
    (16) variable_declaration -> . VAR VARIABLE type
    (17) variable_declaration -> . VAR VARIABLE ASSIGN value
    (18) variable_declaration -> . VARIABLE SHORTASSIGN value
    (28) value -> . VARIABLE
    (29) value -> . number
    (89) empty_list -> . LBRACE RBRACE
    (90) list_with_data -> . LBRACE values RBRACE
    (91) defined_list -> . TYPE VARIABLE LBRACE values RBRACE
    (83) for_initialization -> . FOR VARIABLE SHORTASSIGN value SEMICOLON condition SEMICOLON value double_operator LBRACE statement RBRACE
    (84) for_infinite_bucle -> . FOR LBRACE statement RBRACE
    (85) for_iterator -> . FOR VARIABLE SEMICOLON VARIABLE SHORTASSIGN RANGE VARIABLE LBRACE statement RBRACE
    (53) parameter -> . VARIABLE type
    (30) number -> . INT
    (31) number -> . FLOAT

    PRINT           shift and go to state 16
    INPUT           shift and go to state 17
    IF              shift and go to state 18
    VARIABLE        shift and go to state 23
    TYPE            shift and go to state 28
    FUNCTION        shift and go to state 29
    VAR             shift and go to state 31
    LBRACE          shift and go to state 24
    FOR             shift and go to state 33
    INT             shift and go to state 34
    FLOAT           shift and go to state 35

    statement                      shift and go to state 1
    blocks                         shift and go to state 2
    block                          shift and go to state 3
    print_statement                shift and go to state 4
    input_statement                shift and go to state 5
    conditional_structure          shift and go to state 6
    operation                      shift and go to state 7
    list_structure                 shift and go to state 8
    map_estructure                 shift and go to state 9
    map_assign                     shift and go to state 10
    for_estructure                 shift and go to state 11
    structure                      shift and go to state 12
    function                       shift and go to state 13
    parameters                     shift and go to state 14
    variable_declaration           shift and go to state 15
    value                          shift and go to state 19
    empty_list                     shift and go to state 20
    list_with_data                 shift and go to state 21
    defined_list                   shift and go to state 22
    for_initialization             shift and go to state 25
    for_infinite_bucle             shift and go to state 26
    for_iterator                   shift and go to state 27
    parameter                      shift and go to state 30
    number                         shift and go to state 32

state 1

    (0) S' -> statement .



state 2

    (1) statement -> blocks .

    $end            reduce using rule 1 (statement -> blocks .)
    RBRACE          reduce using rule 1 (statement -> blocks .)


state 3

    (2) blocks -> block .
    (3) blocks -> block . blocks
    (2) blocks -> . block
    (3) blocks -> . block blocks
    (4) block -> . print_statement
    (5) block -> . input_statement
    (6) block -> . conditional_structure
    (7) block -> . operation
    (8) block -> . list_structure
    (9) block -> . map_estructure
    (10) block -> . map_assign
    (11) block -> . for_estructure
    (12) block -> . structure
    (13) block -> . function
    (14) block -> . parameters
    (15) block -> . variable_declaration
    (32) print_statement -> . PRINT LPAREN values RPAREN
    (33) print_statement -> . PRINT LPAREN string_value RPAREN
    (34) print_statement -> . PRINT LPAREN FORMATSTRING COMMA values RPAREN
    (35) print_statement -> . PRINT LPAREN operation RPAREN
    (36) print_statement -> . PRINT LPAREN RPAREN
    (37) input_statement -> . INPUT LPAREN values RPAREN
    (38) input_statement -> . INPUT LPAREN operation RPAREN
    (39) input_statement -> . INPUT LPAREN RPAREN
    (62) conditional_structure -> . IF conditions conditional_body
    (63) conditional_structure -> . IF conditions conditional_body ELSE conditional_body
    (64) conditional_structure -> . IF conditions conditional_body ELSE IF conditions conditional_body ELSE conditional_body
    (40) operation -> . value operator value
    (41) operation -> . value operator operation
    (42) operation -> . value double_operator
    (86) list_structure -> . empty_list
    (87) list_structure -> . list_with_data
    (88) list_structure -> . defined_list
    (92) map_estructure -> . VARIABLE SHORTASSIGN MAP LBRACKET type RBRACKET type LBRACE map_values RBRACE
    (93) map_estructure -> . VARIABLE SHORTASSIGN MAKE LPAREN MAP LBRACKET type RBRACKET type RPAREN
    (97) map_assign -> . VARIABLE LBRACKET string_value RBRACKET ASSIGN string_value
    (80) for_estructure -> . for_initialization
    (81) for_estructure -> . for_infinite_bucle
    (82) for_estructure -> . for_iterator
    (19) structure -> . TYPE VARIABLE STRUCT LBRACE statement RBRACE
    (20) function -> . FUNCTION VARIABLE LPAREN parameters RPAREN type LBRACE blocks RETURN VARIABLE RBRACE
    (21) function -> . FUNCTION VARIABLE LPAREN parameters RPAREN LBRACE blocks RBRACE
    (22) function -> . FUNCTION VARIABLE LPAREN RPAREN type LBRACE blocks RETURN VARIABLE RBRACE
    (23) function -> . FUNCTION VARIABLE LPAREN RPAREN LBRACE blocks RBRACE
    (50) parameters -> . parameter
    (51) parameters -> . parameter parameters
    (52) parameters -> . parameter COMMA parameters
    (16) variable_declaration -> . VAR VARIABLE type
    (17) variable_declaration -> . VAR VARIABLE ASSIGN value
    (18) variable_declaration -> . VARIABLE SHORTASSIGN value
    (28) value -> . VARIABLE
    (29) value -> . number
    (89) empty_list -> . LBRACE RBRACE
    (90) list_with_data -> . LBRACE values RBRACE
    (91) defined_list -> . TYPE VARIABLE LBRACE values RBRACE
    (83) for_initialization -> . FOR VARIABLE SHORTASSIGN value SEMICOLON condition SEMICOLON value double_operator LBRACE statement RBRACE
    (84) for_infinite_bucle -> . FOR LBRACE statement RBRACE
    (85) for_iterator -> . FOR VARIABLE SEMICOLON VARIABLE SHORTASSIGN RANGE VARIABLE LBRACE statement RBRACE
    (53) parameter -> . VARIABLE type
    (30) number -> . INT
    (31) number -> . FLOAT

    $end            reduce using rule 2 (blocks -> block .)
    RBRACE          reduce using rule 2 (blocks -> block .)
    RETURN          reduce using rule 2 (blocks -> block .)
    PRINT           shift and go to state 16
    INPUT           shift and go to state 17
    IF              shift and go to state 18
    VARIABLE        shift and go to state 23
    TYPE            shift and go to state 28
    FUNCTION        shift and go to state 29
    VAR             shift and go to state 31
    LBRACE          shift and go to state 24
    FOR             shift and go to state 33
    INT             shift and go to state 34
    FLOAT           shift and go to state 35

    block                          shift and go to state 3
    blocks                         shift and go to state 36
    print_statement                shift and go to state 4
    input_statement                shift and go to state 5
    conditional_structure          shift and go to state 6
    operation                      shift and go to state 7
    list_structure                 shift and go to state 8
    map_estructure                 shift and go to state 9
    map_assign                     shift and go to state 10
    for_estructure                 shift and go to state 11
    structure                      shift and go to state 12
    function                       shift and go to state 13
    parameters                     shift and go to state 14
    variable_declaration           shift and go to state 15
    value                          shift and go to state 19
    empty_list                     shift and go to state 20
    list_with_data                 shift and go to state 21
    defined_list                   shift and go to state 22
    for_initialization             shift and go to state 25
    for_infinite_bucle             shift and go to state 26
    for_iterator                   shift and go to state 27
    parameter                      shift and go to state 30
    number                         shift and go to state 32

state 4

    (4) block -> print_statement .

    PRINT           reduce using rule 4 (block -> print_statement .)
    INPUT           reduce using rule 4 (block -> print_statement .)
    IF              reduce using rule 4 (block -> print_statement .)
    VARIABLE        reduce using rule 4 (block -> print_statement .)
    TYPE            reduce using rule 4 (block -> print_statement .)
    FUNCTION        reduce using rule 4 (block -> print_statement .)
    VAR             reduce using rule 4 (block -> print_statement .)
    LBRACE          reduce using rule 4 (block -> print_statement .)
    FOR             reduce using rule 4 (block -> print_statement .)
    INT             reduce using rule 4 (block -> print_statement .)
    FLOAT           reduce using rule 4 (block -> print_statement .)
    $end            reduce using rule 4 (block -> print_statement .)
    RBRACE          reduce using rule 4 (block -> print_statement .)
    RETURN          reduce using rule 4 (block -> print_statement .)


state 5

    (5) block -> input_statement .

    PRINT           reduce using rule 5 (block -> input_statement .)
    INPUT           reduce using rule 5 (block -> input_statement .)
    IF              reduce using rule 5 (block -> input_statement .)
    VARIABLE        reduce using rule 5 (block -> input_statement .)
    TYPE            reduce using rule 5 (block -> input_statement .)
    FUNCTION        reduce using rule 5 (block -> input_statement .)
    VAR             reduce using rule 5 (block -> input_statement .)
    LBRACE          reduce using rule 5 (block -> input_statement .)
    FOR             reduce using rule 5 (block -> input_statement .)
    INT             reduce using rule 5 (block -> input_statement .)
    FLOAT           reduce using rule 5 (block -> input_statement .)
    $end            reduce using rule 5 (block -> input_statement .)
    RBRACE          reduce using rule 5 (block -> input_statement .)
    RETURN          reduce using rule 5 (block -> input_statement .)


state 6

    (6) block -> conditional_structure .

    PRINT           reduce using rule 6 (block -> conditional_structure .)
    INPUT           reduce using rule 6 (block -> conditional_structure .)
    IF              reduce using rule 6 (block -> conditional_structure .)
    VARIABLE        reduce using rule 6 (block -> conditional_structure .)
    TYPE            reduce using rule 6 (block -> conditional_structure .)
    FUNCTION        reduce using rule 6 (block -> conditional_structure .)
    VAR             reduce using rule 6 (block -> conditional_structure .)
    LBRACE          reduce using rule 6 (block -> conditional_structure .)
    FOR             reduce using rule 6 (block -> conditional_structure .)
    INT             reduce using rule 6 (block -> conditional_structure .)
    FLOAT           reduce using rule 6 (block -> conditional_structure .)
    $end            reduce using rule 6 (block -> conditional_structure .)
    RBRACE          reduce using rule 6 (block -> conditional_structure .)
    RETURN          reduce using rule 6 (block -> conditional_structure .)


state 7

    (7) block -> operation .

    PRINT           reduce using rule 7 (block -> operation .)
    INPUT           reduce using rule 7 (block -> operation .)
    IF              reduce using rule 7 (block -> operation .)
    VARIABLE        reduce using rule 7 (block -> operation .)
    TYPE            reduce using rule 7 (block -> operation .)
    FUNCTION        reduce using rule 7 (block -> operation .)
    VAR             reduce using rule 7 (block -> operation .)
    LBRACE          reduce using rule 7 (block -> operation .)
    FOR             reduce using rule 7 (block -> operation .)
    INT             reduce using rule 7 (block -> operation .)
    FLOAT           reduce using rule 7 (block -> operation .)
    $end            reduce using rule 7 (block -> operation .)
    RBRACE          reduce using rule 7 (block -> operation .)
    RETURN          reduce using rule 7 (block -> operation .)


state 8

    (8) block -> list_structure .

    PRINT           reduce using rule 8 (block -> list_structure .)
    INPUT           reduce using rule 8 (block -> list_structure .)
    IF              reduce using rule 8 (block -> list_structure .)
    VARIABLE        reduce using rule 8 (block -> list_structure .)
    TYPE            reduce using rule 8 (block -> list_structure .)
    FUNCTION        reduce using rule 8 (block -> list_structure .)
    VAR             reduce using rule 8 (block -> list_structure .)
    LBRACE          reduce using rule 8 (block -> list_structure .)
    FOR             reduce using rule 8 (block -> list_structure .)
    INT             reduce using rule 8 (block -> list_structure .)
    FLOAT           reduce using rule 8 (block -> list_structure .)
    $end            reduce using rule 8 (block -> list_structure .)
    RBRACE          reduce using rule 8 (block -> list_structure .)
    RETURN          reduce using rule 8 (block -> list_structure .)


state 9

    (9) block -> map_estructure .

    PRINT           reduce using rule 9 (block -> map_estructure .)
    INPUT           reduce using rule 9 (block -> map_estructure .)
    IF              reduce using rule 9 (block -> map_estructure .)
    VARIABLE        reduce using rule 9 (block -> map_estructure .)
    TYPE            reduce using rule 9 (block -> map_estructure .)
    FUNCTION        reduce using rule 9 (block -> map_estructure .)
    VAR             reduce using rule 9 (block -> map_estructure .)
    LBRACE          reduce using rule 9 (block -> map_estructure .)
    FOR             reduce using rule 9 (block -> map_estructure .)
    INT             reduce using rule 9 (block -> map_estructure .)
    FLOAT           reduce using rule 9 (block -> map_estructure .)
    $end            reduce using rule 9 (block -> map_estructure .)
    RBRACE          reduce using rule 9 (block -> map_estructure .)
    RETURN          reduce using rule 9 (block -> map_estructure .)


state 10

    (10) block -> map_assign .

    PRINT           reduce using rule 10 (block -> map_assign .)
    INPUT           reduce using rule 10 (block -> map_assign .)
    IF              reduce using rule 10 (block -> map_assign .)
    VARIABLE        reduce using rule 10 (block -> map_assign .)
    TYPE            reduce using rule 10 (block -> map_assign .)
    FUNCTION        reduce using rule 10 (block -> map_assign .)
    VAR             reduce using rule 10 (block -> map_assign .)
    LBRACE          reduce using rule 10 (block -> map_assign .)
    FOR             reduce using rule 10 (block -> map_assign .)
    INT             reduce using rule 10 (block -> map_assign .)
    FLOAT           reduce using rule 10 (block -> map_assign .)
    $end            reduce using rule 10 (block -> map_assign .)
    RBRACE          reduce using rule 10 (block -> map_assign .)
    RETURN          reduce using rule 10 (block -> map_assign .)


state 11

    (11) block -> for_estructure .

    PRINT           reduce using rule 11 (block -> for_estructure .)
    INPUT           reduce using rule 11 (block -> for_estructure .)
    IF              reduce using rule 11 (block -> for_estructure .)
    VARIABLE        reduce using rule 11 (block -> for_estructure .)
    TYPE            reduce using rule 11 (block -> for_estructure .)
    FUNCTION        reduce using rule 11 (block -> for_estructure .)
    VAR             reduce using rule 11 (block -> for_estructure .)
    LBRACE          reduce using rule 11 (block -> for_estructure .)
    FOR             reduce using rule 11 (block -> for_estructure .)
    INT             reduce using rule 11 (block -> for_estructure .)
    FLOAT           reduce using rule 11 (block -> for_estructure .)
    $end            reduce using rule 11 (block -> for_estructure .)
    RBRACE          reduce using rule 11 (block -> for_estructure .)
    RETURN          reduce using rule 11 (block -> for_estructure .)


state 12

    (12) block -> structure .

    PRINT           reduce using rule 12 (block -> structure .)
    INPUT           reduce using rule 12 (block -> structure .)
    IF              reduce using rule 12 (block -> structure .)
    VARIABLE        reduce using rule 12 (block -> structure .)
    TYPE            reduce using rule 12 (block -> structure .)
    FUNCTION        reduce using rule 12 (block -> structure .)
    VAR             reduce using rule 12 (block -> structure .)
    LBRACE          reduce using rule 12 (block -> structure .)
    FOR             reduce using rule 12 (block -> structure .)
    INT             reduce using rule 12 (block -> structure .)
    FLOAT           reduce using rule 12 (block -> structure .)
    $end            reduce using rule 12 (block -> structure .)
    RBRACE          reduce using rule 12 (block -> structure .)
    RETURN          reduce using rule 12 (block -> structure .)


state 13

    (13) block -> function .

    PRINT           reduce using rule 13 (block -> function .)
    INPUT           reduce using rule 13 (block -> function .)
    IF              reduce using rule 13 (block -> function .)
    VARIABLE        reduce using rule 13 (block -> function .)
    TYPE            reduce using rule 13 (block -> function .)
    FUNCTION        reduce using rule 13 (block -> function .)
    VAR             reduce using rule 13 (block -> function .)
    LBRACE          reduce using rule 13 (block -> function .)
    FOR             reduce using rule 13 (block -> function .)
    INT             reduce using rule 13 (block -> function .)
    FLOAT           reduce using rule 13 (block -> function .)
    $end            reduce using rule 13 (block -> function .)
    RBRACE          reduce using rule 13 (block -> function .)
    RETURN          reduce using rule 13 (block -> function .)


state 14

    (14) block -> parameters .

    PRINT           reduce using rule 14 (block -> parameters .)
    INPUT           reduce using rule 14 (block -> parameters .)
    IF              reduce using rule 14 (block -> parameters .)
    VARIABLE        reduce using rule 14 (block -> parameters .)
    TYPE            reduce using rule 14 (block -> parameters .)
    FUNCTION        reduce using rule 14 (block -> parameters .)
    VAR             reduce using rule 14 (block -> parameters .)
    LBRACE          reduce using rule 14 (block -> parameters .)
    FOR             reduce using rule 14 (block -> parameters .)
    INT             reduce using rule 14 (block -> parameters .)
    FLOAT           reduce using rule 14 (block -> parameters .)
    $end            reduce using rule 14 (block -> parameters .)
    RBRACE          reduce using rule 14 (block -> parameters .)
    RETURN          reduce using rule 14 (block -> parameters .)


state 15

    (15) block -> variable_declaration .

    PRINT           reduce using rule 15 (block -> variable_declaration .)
    INPUT           reduce using rule 15 (block -> variable_declaration .)
    IF              reduce using rule 15 (block -> variable_declaration .)
    VARIABLE        reduce using rule 15 (block -> variable_declaration .)
    TYPE            reduce using rule 15 (block -> variable_declaration .)
    FUNCTION        reduce using rule 15 (block -> variable_declaration .)
    VAR             reduce using rule 15 (block -> variable_declaration .)
    LBRACE          reduce using rule 15 (block -> variable_declaration .)
    FOR             reduce using rule 15 (block -> variable_declaration .)
    INT             reduce using rule 15 (block -> variable_declaration .)
    FLOAT           reduce using rule 15 (block -> variable_declaration .)
    $end            reduce using rule 15 (block -> variable_declaration .)
    RBRACE          reduce using rule 15 (block -> variable_declaration .)
    RETURN          reduce using rule 15 (block -> variable_declaration .)


state 16

    (32) print_statement -> PRINT . LPAREN values RPAREN
    (33) print_statement -> PRINT . LPAREN string_value RPAREN
    (34) print_statement -> PRINT . LPAREN FORMATSTRING COMMA values RPAREN
    (35) print_statement -> PRINT . LPAREN operation RPAREN
    (36) print_statement -> PRINT . LPAREN RPAREN

    LPAREN          shift and go to state 37


state 17

    (37) input_statement -> INPUT . LPAREN values RPAREN
    (38) input_statement -> INPUT . LPAREN operation RPAREN
    (39) input_statement -> INPUT . LPAREN RPAREN

    LPAREN          shift and go to state 38


state 18

    (62) conditional_structure -> IF . conditions conditional_body
    (63) conditional_structure -> IF . conditions conditional_body ELSE conditional_body
    (64) conditional_structure -> IF . conditions conditional_body ELSE IF conditions conditional_body ELSE conditional_body
    (68) conditions -> . condition
    (69) conditions -> . condition logical_operator conditions
    (70) condition -> . value relational_operator value
    (28) value -> . VARIABLE
    (29) value -> . number
    (30) number -> . INT
    (31) number -> . FLOAT

    VARIABLE        shift and go to state 42
    INT             shift and go to state 34
    FLOAT           shift and go to state 35

    conditions                     shift and go to state 39
    condition                      shift and go to state 40
    value                          shift and go to state 41
    number                         shift and go to state 32

state 19

    (40) operation -> value . operator value
    (41) operation -> value . operator operation
    (42) operation -> value . double_operator
    (43) operator -> . PLUS
    (44) operator -> . MINUS
    (45) operator -> . TIMES
    (46) operator -> . DIVIDE
    (47) operator -> . ASSIGN
    (48) double_operator -> . INCREMENT
    (49) double_operator -> . DECREMENT

    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    TIMES           shift and go to state 47
    DIVIDE          shift and go to state 48
    ASSIGN          shift and go to state 49
    INCREMENT       shift and go to state 50
    DECREMENT       shift and go to state 51

    operator                       shift and go to state 43
    double_operator                shift and go to state 44

state 20

    (86) list_structure -> empty_list .

    PRINT           reduce using rule 86 (list_structure -> empty_list .)
    INPUT           reduce using rule 86 (list_structure -> empty_list .)
    IF              reduce using rule 86 (list_structure -> empty_list .)
    VARIABLE        reduce using rule 86 (list_structure -> empty_list .)
    TYPE            reduce using rule 86 (list_structure -> empty_list .)
    FUNCTION        reduce using rule 86 (list_structure -> empty_list .)
    VAR             reduce using rule 86 (list_structure -> empty_list .)
    LBRACE          reduce using rule 86 (list_structure -> empty_list .)
    FOR             reduce using rule 86 (list_structure -> empty_list .)
    INT             reduce using rule 86 (list_structure -> empty_list .)
    FLOAT           reduce using rule 86 (list_structure -> empty_list .)
    $end            reduce using rule 86 (list_structure -> empty_list .)
    RBRACE          reduce using rule 86 (list_structure -> empty_list .)
    RETURN          reduce using rule 86 (list_structure -> empty_list .)


state 21

    (87) list_structure -> list_with_data .

    PRINT           reduce using rule 87 (list_structure -> list_with_data .)
    INPUT           reduce using rule 87 (list_structure -> list_with_data .)
    IF              reduce using rule 87 (list_structure -> list_with_data .)
    VARIABLE        reduce using rule 87 (list_structure -> list_with_data .)
    TYPE            reduce using rule 87 (list_structure -> list_with_data .)
    FUNCTION        reduce using rule 87 (list_structure -> list_with_data .)
    VAR             reduce using rule 87 (list_structure -> list_with_data .)
    LBRACE          reduce using rule 87 (list_structure -> list_with_data .)
    FOR             reduce using rule 87 (list_structure -> list_with_data .)
    INT             reduce using rule 87 (list_structure -> list_with_data .)
    FLOAT           reduce using rule 87 (list_structure -> list_with_data .)
    $end            reduce using rule 87 (list_structure -> list_with_data .)
    RBRACE          reduce using rule 87 (list_structure -> list_with_data .)
    RETURN          reduce using rule 87 (list_structure -> list_with_data .)


state 22

    (88) list_structure -> defined_list .
